Updating api and implemented some db methods
