# service/api/delete-uncommentPhoto.go
@@ -1,0 +1,60 @@
+package api
+
+import (
+	"encoding/json"
+	"errors"
+	"net/http"
+	"strconv"
+
+	"github.com/julienschmidt/httprouter"
+	"github.com/luigidannibale/Wasa/service/database"
+)
+
+func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+	w.Header().Set("content-type", "application/json")
+
+	/*Authentication part :
+	- takes the userID from authentication
+	- validates it
+	*/
+	userID, e := strconv.Atoi(r.Header.Get("Authorization"))
+	if e != nil {
+		http.Error(w, "Couldn't identify userId for authentication "+e.Error(), http.StatusUnauthorized)
+		return
+	}
+	e = rt.db.VerifyUserId(userID)
+	if e != nil {
+		if errors.Is(e, database.ErrNotFound) {
+			http.Error(w, "The userID provided for authentication can't be found", http.StatusUnauthorized)
+		}
+		if errors.Is(e, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred on ther server while identifying userID", http.StatusInternalServerError)
+		}
+		return
+	}
+
+	//Takes the id of the comment, and validates it
+	commentID, err := strconv.Atoi(ps.ByName("commentID"))
+	if err != nil {
+		http.Error(w, "Could not convert the commentID", http.StatusBadRequest)
+		return
+	}
+	s, e := rt.db.DeleteComment(commentID)
+	//Checks for DB errors
+	if e != nil {
+		if errors.Is(e, database.ErrNotFound) {
+			http.Error(w, s, http.StatusNotFound)
+		}
+		if errors.Is(e, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred while deleting the comment "+e.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	//Operation successful, creates an OK response
+	w.WriteHeader(http.StatusOK)
+	e = json.NewEncoder(w).Encode(s)
+	if e != nil {
+		http.Error(w, "Comment deleted successfully but an error occurred while encoding the message", http.StatusInternalServerError)
+	}
+}
