# service/api/get-getFollowedList.go
@@ -1,0 +1,56 @@
+package api
+
+import (
+	"encoding/json"
+	"errors"
+	"net/http"
+	"strconv"
+
+	"github.com/julienschmidt/httprouter"
+	"github.com/luigidannibale/Wasa/service/database"
+)
+
+func (rt *_router) getFollowedList(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+	w.Header().Set("content-type", "application/json")
+
+	/*Authentication part :
+	- takes userID from auth
+	- validates it
+	*/
+	userID, er := strconv.Atoi(r.Header.Get("Authorization"))
+	if er != nil {
+		http.Error(w, "Couldn't identify userId for authentication", http.StatusUnauthorized)
+		return
+	}
+	e := rt.db.VerifyUserId(userID)
+	if e != nil {
+		if errors.Is(e, database.ErrNotFound) {
+			http.Error(w, "The userID provided for authentication can't be found", http.StatusUnauthorized)
+		}
+		if errors.Is(e, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred on ther server while identifying userID", http.StatusInternalServerError)
+		}
+		return
+	}
+
+	// Gets the like
+	followedList, s, err := rt.db.GetFollowedList(userID)
+
+	// Checks for DB errors
+	if err != nil {
+		if errors.Is(err, database.ErrNotFound) {
+			http.Error(w, s, http.StatusNotFound)
+		}
+		if errors.Is(err, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred on ther server while getting the like"+s, http.StatusInternalServerError)
+		}
+		return
+	}
+
+	// Operation successful, creates an OK response
+	w.WriteHeader(http.StatusOK)
+	e = json.NewEncoder(w).Encode(followedList)
+	if e != nil {
+		http.Error(w, "Operation successful but an error occured while returning the list of followed "+e.Error(), http.StatusInternalServerError)
+	}
+}
